opa/networkpolicy/allow.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: alpine
        image: alpine
        command:
          - sh
          - -c
          - sleep 100000
