opa/networkpolicy/disallow.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: illegal-client-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: alpine
        image: alpine
        command:
          - sh
          - -c
          - sleep 100000
